# newtry

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  index.html  nginx.conf
pkg/: ecosystem_sim.d.ts  ecosystem_sim.js  ecosystem_sim_bg.wasm  ecosystem_sim_bg.wasm.d.ts
src/: lib.rs
src/render/: mod.rs
src/simulation/: config.rs  environment.rs  mod.rs  organism.rs  species.rs  world.rs
