[package]
name = "ecosystem-sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "DomRect",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "Window",
    "Performance",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "EventTarget",
    "Node",
    "Text",
    "Comment",
    "Range",
    "Selection",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Storage",
] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
